<resources>
    <string name="app_name">Widget Drawer</string>

    <!-- Titles -->
    <string name="enable">Enable</string>
    <string name="handle_height">Handle Height</string>
    <string name="handle_width">Handle Width</string>
    <string name="handle_color">Handle Color</string>
    <string name="handle_shadow">Handle Shadow</string>
    <string name="add_widget">Add Widget</string>
    <string name="unlicensed">Unlicensed App!</string>
    <string name="show_handle">Show Handle</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_on_empty_tap">Tap Empty Space to Close Drawer</string>
    <string name="undo">Undo</string>
    <string name="shortcut">Shortcut</string>
    <string name="drawer_background_color">Drawer Background Color</string>
    <string name="enhanced_view_mode">Enhanced View Mode</string>
    <string name="column_count">Column Count</string>

    <!-- Messages -->
    <string name="allow_overlay">Please allow Widget Drawer to draw over other apps</string>
    <string name="unlicensed_desc">It seems you have an unlicensed copy of Widget Drawer. If you recently purchased the app, wait a few minutes and try again.</string>
    <string name="edit_instructions">Press and hold widgets to reorder.\nSwipe widgets left or right to remove.</string>
    <string name="widget_removed">Widget removed</string>
    <string name="unable_to_configure_widget">Unable to configure widget</string>
    <string name="enhanced_view_mode_desc">Allow Widget Drawer to display above everything (apps, status bar, lock screen, etc).</string>
    <string name="enhanced_view_mode_acc_desc">Allow Widget Drawer to display above everything (apps, status bar, lock screen, etc). Widget Drawer does not collect any personal information using this service. It is simply used to allow the drawer to show over everything.</string>
    <string name="enable_accessibility">Please enable the Enhanced View Mode service.</string>
    <string name="column_count_desc">How many columns of widgets the drawer should have. Increase this for greater widget width granularity.</string>
    <string name="enhanced_view_mode_grant_desc">Enhanced View Mode makes use of an Accessibility Service to display Widget Drawer on the lock screen. Press \"OK\" to go to Settings to grant Widget Drawer accessibility access. No personal information is collected.</string>

    <!-- Content Descriptions -->
    <string name="edit_mode">Edit Mode</string>
    <string name="open_widget_drawer">Open Widget Drawer</string>
    <string name="toggle_opacity">Toggle Opaque Backgrounds</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_close_toolbar">Open/Close Toolbar</string>
    <string name="expand_vertically">Expand Widget Vertically</string>
    <string name="expand_horizontally">Expand Widget Horizontally</string>
    <string name="collapse_vertically">Collapse Widget Vertically</string>
    <string name="collapse_horizontally">Collapse Widget Horizontally</string>
    <string name="back">Back</string>
</resources>
