<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:title="@string/enable"
        android:key="enabled"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:title="@string/close_on_empty_tap"
        android:key="close_on_empty_tap"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:title="@string/enhanced_view_mode"
        android:summary="@string/enhanced_view_mode_desc"
        android:key="enhanced_view_mode"
        android:defaultValue="false"
        />

    <Preference
        android:title="@string/open_drawer"
        android:key="open_drawer"
        android:dependency="enabled"
        />

    <SwitchPreference
        android:title="@string/show_handle"
        android:key="show_handle"
        android:defaultValue="true"
        android:dependency="enabled"
        />

    <SwitchPreference
        android:title="@string/handle_shadow"
        android:key="handle_shadow"
        android:defaultValue="true"
        android:dependency="show_handle"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/handle_height"
        android:key="handle_height"
        android:defaultValue="140"
        app:minValue="64"
        app:maxValue="500"
        app:units="dp"
        android:dependency="show_handle"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/handle_width"
        android:key="handle_width"
        android:defaultValue="6"
        app:minValue="1"
        app:maxValue="24"
        app:units="dp"
        android:dependency="show_handle"
        />

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:title="@string/handle_color"
        android:key="handle_color"
        android:defaultValue="-1"
        app:cpv_allowCustom="true"
        app:cpv_showAlphaSlider="true"
        android:dependency="show_handle"
        />

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:title="@string/drawer_background_color"
        android:key="drawer_background_color"
        android:defaultValue="@color/drawerBackgroundDefault"
        app:cpv_allowCustom="true"
        app:cpv_showAlphaSlider="true"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/column_count"
        android:summary="@string/column_count_desc"
        android:defaultValue="2"
        android:key="column_count"
        app:minValue="1"
        app:maxValue="5"
        />

</PreferenceScreen>